test/files/neg/bug501.check
bug501.scala:3: error: lower bound X does not conform to upper bound Y
    abstract class I { type T >: X <: Y; }
                            ^
one error found
